--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -22,15 +22,24 @@
     </div>
 
     <div class="form-group">
-        <label for="CategoryId">Категория</label>
+        <label asp-for="CategoryId"></label>
         <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+        <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label for="BrandId">Бренд</label>
+        <label asp-for="BrandId"></label>
         <select asp-for="BrandId" class="form-control" asp-items="ViewBag.BrandId"></select>
+        <span asp-validation-for="BrandId" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Добавить</button>
-    <a asp-action="Index" class="btn btn-secondary">Назад</a>
+    <button type="submit" class="btn btn-primary">Создать</button>
 </form>
+
+<a asp-action="Index" class="btn btn-secondary">Назад</a>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
